[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/Title.gd" id="1"]
[ext_resource type="PackedScene" path="res://ui/SettingsPanel.tscn" id="2"]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0705882, 0.0666667, 0.0980392, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 64
custom_constants/margin_top = 64
custom_constants/margin_right = 64
custom_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
size_flags_vertical = 3
separation = 32

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Aperture Nine"
custom_minimum_size = Vector2(0, 80)
vertical_alignment = 1
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
text = "Begin Shift"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
text = "Exit"

[node name="SettingsPanelInstance" parent="." instance=ExtResource("2")]
position = Vector2(32, 32)
